--- a/porsche-font_bold.css
+++ b/porsche-font_bold.css
@@ -1,6 +1,6 @@
 /* Porsche Fonts */
 @font-face {
-  font-family: 'Porsche Font';
+  font-family: 'Porsche Font Bold';
   src:url('https://nhoccamelot.github.io/Porsche_Font/porsche-next-w-la-bold.min.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
